fix: add margin-bottom to paragraphs within .remember-wrap class in general.scss for improved spacing

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -2597,6 +2597,12 @@ table {
 	}
 }
 
+.remember-wrap {
+	p {
+		margin-bottom: 12px;
+	}
+}
+
 // zdx
 
 .content-function {
